# Raytracing-Showcase

./: CMakeLists.txt  Camera.cpp  GameObject.cpp  Player.cpp  Position.cpp  README.md  Ray.cpp  main.cpp  vectorLibTest.cpp  vectorMath.cpp
include/: Camera.hpp  GameObject.hpp  Player.hpp  Position.hpp  Ray.hpp  color.h  trignotation.h
include/vectorMath/: vectorMath.hpp
